// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/typography/demo/basic.tsx correctly 1`] = `
<article
  class="ant-typography"
>
  <h1
    class="ant-typography"
  >
    <span>
      Introduction
    </span>
  </h1>
  <div
    style="width:100px"
  >
    <span
      class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
    >
      <span>
        1111111111111111111111111111111111111111111111111
      </span>
      <div
        aria-label="Copy"
        class="ant-typography-copy"
        role="button"
        style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
        tabindex="0"
      >
        <span
          aria-label="copy"
          class="anticon anticon-copy"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="copy"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
            />
          </svg>
        </span>
      </div>
    </span>
  </div>
  <div
    class="ant-typography"
  >
    <span>
      In the process of internal desktop applications development, many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of development.
    </span>
  </div>
  <div
    class="ant-typography"
  >
    <span>
      After massive project practice and summaries, Ant Design, a design language for background applications, is refined by Ant UED Team, which aims to
      <!-- -->
      <span
        class="ant-typography"
      >
        <span>
          <strong>
            uniform the user interface specs for internal background projects, lower the unnecessary cost of design differences and implementation and liberate the resources of design and front-end development
          </strong>
        </span>
      </span>
      .
    </span>
  </div>
  <h2
    class="ant-typography"
  >
    <span>
      Guidelines and Resources
    </span>
  </h2>
  <div
    class="ant-typography"
  >
    <span>
      We supply a series of design principles, practical patterns and high quality design resources (
      <span
        class="ant-typography"
      >
        <span>
          <code>
            Sketch
          </code>
        </span>
      </span>
       and 
      <span
        class="ant-typography"
      >
        <span>
          <code>
            Axure
          </code>
        </span>
      </span>
      ), to help people create their product prototypes beautifully and efficiently.
    </span>
  </div>
  <div
    class="ant-typography"
  >
    <span>
      <ul>
        <li>
          <a
            class="ant-typography"
            href="/docs/spec/proximity"
          >
            <span>
              Principles
            </span>
          </a>
        </li>
        <li>
          <a
            class="ant-typography"
            href="/docs/spec/overview"
          >
            <span>
              Patterns
            </span>
          </a>
        </li>
        <li>
          <a
            class="ant-typography"
            href="/docs/resources"
          >
            <span>
              Resource Download
            </span>
          </a>
        </li>
      </ul>
    </span>
  </div>
  <div
    class="ant-typography"
  >
    <span>
      Press 
      <span
        class="ant-typography"
      >
        <span>
          <kbd>
            Esc
          </kbd>
        </span>
      </span>
       to exit...
    </span>
  </div>
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />
  <h1
    class="ant-typography"
  >
    <span>
      介绍
    </span>
  </h1>
  <div
    class="ant-typography"
  >
    <span>
      蚂蚁的企业级产品是一个庞大且复杂的体系。这类产品不仅量级巨大且功能复杂，而且变动和并发频繁，常常需要设计与开发能够快速的做出响应。同时这类产品中有存在很多类似的页面以及组件，可以通过抽象得到一些稳定且高复用性的内容。
    </span>
  </div>
  <div
    class="ant-typography"
  >
    <span>
      随着商业化的趋势，越来越多的企业级产品对更好的用户体验有了进一步的要求。带着这样的一个终极目标，我们（蚂蚁集团体验技术部）经过大量的项目实践和总结，逐步打磨出一个服务于企业级产品的设计体系 Ant Design。基于
      <span
        class="ant-typography"
      >
        <span>
          <mark>
            『确定』和『自然』
          </mark>
        </span>
      </span>
      的设计价值观，通过模块化的解决方案，降低冗余的生产成本，让设计者专注于
      <span
        class="ant-typography"
      >
        <span>
          <strong>
            更好的用户体验
          </strong>
        </span>
      </span>
      。
    </span>
  </div>
  <h2
    class="ant-typography"
  >
    <span>
      设计资源
    </span>
  </h2>
  <div
    class="ant-typography"
  >
    <span>
      我们提供完善的设计原则、最佳实践和设计资源文件（
      <span
        class="ant-typography"
      >
        <span>
          <code>
            Sketch
          </code>
        </span>
      </span>
       和
      <span
        class="ant-typography"
      >
        <span>
          <code>
            Axure
          </code>
        </span>
      </span>
      ），来帮助业务快速设计出高质量的产品原型。
    </span>
  </div>
  <div
    class="ant-typography"
  >
    <span>
      <ul>
        <li>
          <a
            class="ant-typography"
            href="/docs/spec/proximity-cn"
          >
            <span>
              设计原则
            </span>
          </a>
        </li>
        <li>
          <a
            class="ant-typography"
            href="/docs/spec/overview-cn"
          >
            <span>
              设计模式
            </span>
          </a>
        </li>
        <li>
          <a
            class="ant-typography"
            href="/docs/resources-cn"
          >
            <span>
              设计资源
            </span>
          </a>
        </li>
      </ul>
    </span>
  </div>
  <div
    class="ant-typography"
  >
    <span>
      <blockquote>
        AntV 是蚂蚁集团全新一代数据可视化解决方案，致力于提供一套简单方便、专业可靠、不限可能的数据可视化最佳实践。得益于丰富的业务场景和用户需求挑战，AntV 经历多年积累与不断打磨，已支撑整个阿里集团内外 20000+ 业务系统，通过了日均千万级 UV 产品的严苛考验。
我们正在基础图表，图分析，图编辑，地理空间可视化，智能可视化等各个可视化的领域耕耘，欢迎同路人一起前行。
      </blockquote>
      <pre>
        AntV 是蚂蚁集团全新一代数据可视化解决方案，致力于提供一套简单方便、专业可靠、不限可能的数据可视化最佳实践。得益于丰富的业务场景和用户需求挑战，AntV 经历多年积累与不断打磨，已支撑整个阿里集团内外 20000+ 业务系统，通过了日均千万级 UV 产品的严苛考验。
我们正在基础图表，图分析，图编辑，地理空间可视化，智能可视化等各个可视化的领域耕耘，欢迎同路人一起前行。
      </pre>
    </span>
  </div>
  <div
    class="ant-typography"
  >
    <span>
      按
      <span
        class="ant-typography"
      >
        <span>
          <kbd>
            Esc
          </kbd>
        </span>
      </span>
      键退出阅读……
    </span>
  </div>
</article>
`;

exports[`renders components/typography/demo/componentToken-debug.tsx correctly 1`] = `
<article
  class="ant-typography"
>
  <h1
    class="ant-typography"
  >
    <span>
      Introduction
    </span>
  </h1>
  <div
    class="ant-typography"
  >
    <span>
      In the process of internal desktop applications development, many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of development.
    </span>
  </div>
  <div
    class="ant-typography"
  >
    <span>
      After massive project practice and summaries, Ant Design, a design language for background applications, is refined by Ant UED Team, which aims to
      <!-- -->
      <span
        class="ant-typography"
      >
        <span>
          <strong>
            uniform the user interface specs for internal background projects, lower the unnecessary cost of design differences and implementation and liberate the resources of design and front-end development
          </strong>
        </span>
      </span>
      .
    </span>
  </div>
  <h2
    class="ant-typography"
  >
    <span>
      Guidelines and Resources
    </span>
  </h2>
  <div
    class="ant-typography"
  >
    <span>
      We supply a series of design principles, practical patterns and high quality design resources (
      <span
        class="ant-typography"
      >
        <span>
          <code>
            Sketch
          </code>
        </span>
      </span>
       and 
      <span
        class="ant-typography"
      >
        <span>
          <code>
            Axure
          </code>
        </span>
      </span>
      ), to help people create their product prototypes beautifully and efficiently.
    </span>
  </div>
  <div
    class="ant-typography"
  >
    <span>
      <ul>
        <li>
          <a
            class="ant-typography"
            href="/docs/spec/proximity"
          >
            <span>
              Principles
            </span>
          </a>
        </li>
        <li>
          <a
            class="ant-typography"
            href="/docs/spec/overview"
          >
            <span>
              Patterns
            </span>
          </a>
        </li>
        <li>
          <a
            class="ant-typography"
            href="/docs/resources"
          >
            <span>
              Resource Download
            </span>
          </a>
        </li>
      </ul>
    </span>
  </div>
  <div
    class="ant-typography"
  >
    <span>
      Press 
      <span
        class="ant-typography"
      >
        <span>
          <kbd>
            Esc
          </kbd>
        </span>
      </span>
       to exit...
    </span>
  </div>
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />
  <h1
    class="ant-typography"
  >
    <span>
      介绍
    </span>
  </h1>
  <div
    class="ant-typography"
  >
    <span>
      蚂蚁的企业级产品是一个庞大且复杂的体系。这类产品不仅量级巨大且功能复杂，而且变动和并发频繁，常常需要设计与开发能够快速的做出响应。同时这类产品中有存在很多类似的页面以及组件，可以通过抽象得到一些稳定且高复用性的内容。
    </span>
  </div>
  <div
    class="ant-typography"
  >
    <span>
      随着商业化的趋势，越来越多的企业级产品对更好的用户体验有了进一步的要求。带着这样的一个终极目标，我们（蚂蚁集团体验技术部）经过大量的项目实践和总结，逐步打磨出一个服务于企业级产品的设计体系 Ant Design。基于
      <span
        class="ant-typography"
      >
        <span>
          <mark>
            『确定』和『自然』
          </mark>
        </span>
      </span>
      的设计价值观，通过模块化的解决方案，降低冗余的生产成本，让设计者专注于
      <span
        class="ant-typography"
      >
        <span>
          <strong>
            更好的用户体验
          </strong>
        </span>
      </span>
      。
    </span>
  </div>
  <h2
    class="ant-typography"
  >
    <span>
      设计资源
    </span>
  </h2>
  <div
    class="ant-typography"
  >
    <span>
      我们提供完善的设计原则、最佳实践和设计资源文件（
      <span
        class="ant-typography"
      >
        <span>
          <code>
            Sketch
          </code>
        </span>
      </span>
       和
      <span
        class="ant-typography"
      >
        <span>
          <code>
            Axure
          </code>
        </span>
      </span>
      ），来帮助业务快速设计出高质量的产品原型。
    </span>
  </div>
  <div
    class="ant-typography"
  >
    <span>
      <ul>
        <li>
          <a
            class="ant-typography"
            href="/docs/spec/proximity-cn"
          >
            <span>
              设计原则
            </span>
          </a>
        </li>
        <li>
          <a
            class="ant-typography"
            href="/docs/spec/overview-cn"
          >
            <span>
              设计模式
            </span>
          </a>
        </li>
        <li>
          <a
            class="ant-typography"
            href="/docs/resources-cn"
          >
            <span>
              设计资源
            </span>
          </a>
        </li>
      </ul>
    </span>
  </div>
  <div
    class="ant-typography"
  >
    <span>
      <blockquote>
        AntV 是蚂蚁集团全新一代数据可视化解决方案，致力于提供一套简单方便、专业可靠、不限可能的数据可视化最佳实践。得益于丰富的业务场景和用户需求挑战，AntV 经历多年积累与不断打磨，已支撑整个阿里集团内外 20000+ 业务系统，通过了日均千万级 UV 产品的严苛考验。
我们正在基础图表，图分析，图编辑，地理空间可视化，智能可视化等各个可视化的领域耕耘，欢迎同路人一起前行。
      </blockquote>
      <pre>
        AntV 是蚂蚁集团全新一代数据可视化解决方案，致力于提供一套简单方便、专业可靠、不限可能的数据可视化最佳实践。得益于丰富的业务场景和用户需求挑战，AntV 经历多年积累与不断打磨，已支撑整个阿里集团内外 20000+ 业务系统，通过了日均千万级 UV 产品的严苛考验。
我们正在基础图表，图分析，图编辑，地理空间可视化，智能可视化等各个可视化的领域耕耘，欢迎同路人一起前行。
      </pre>
    </span>
  </div>
  <div
    class="ant-typography"
  >
    <span>
      按
      <span
        class="ant-typography"
      >
        <span>
          <kbd>
            Esc
          </kbd>
        </span>
      </span>
      键退出阅读……
    </span>
  </div>
</article>
`;

exports[`renders components/typography/demo/copyable.tsx correctly 1`] = `
Array [
  <div
    class="ant-typography"
  >
    <span>
      This is a copyable text.
    </span>
    <div
      aria-label="Copy"
      class="ant-typography-copy"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="copy"
        class="anticon anticon-copy"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="copy"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    class="ant-typography"
  >
    <span>
      Replace copy text.
    </span>
    <div
      aria-label="Copy"
      class="ant-typography-copy"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="copy"
        class="anticon anticon-copy"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="copy"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    class="ant-typography"
  >
    <span>
      Custom Copy icon and replace tooltips text.
    </span>
    <div
      aria-label="click here"
      class="ant-typography-copy"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="smile"
        class="anticon anticon-smile"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="smile"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    class="ant-typography"
  >
    <span>
      Hide Copy tooltips.
    </span>
    <div
      aria-label="Copy"
      class="ant-typography-copy"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="copy"
        class="anticon anticon-copy"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="copy"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
          />
        </svg>
      </span>
    </div>
  </div>,
  <span
    class="ant-typography"
  >
    <span />
    <div
      aria-label="Copy"
      class="ant-typography-copy ant-typography-copy-icon-only"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="copy"
        class="anticon anticon-copy"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="copy"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
          />
        </svg>
      </span>
    </div>
  </span>,
  <div
    class="ant-typography"
  >
    <span>
      Request copy text.
    </span>
    <div
      aria-label="Copy"
      class="ant-typography-copy"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="copy"
        class="anticon anticon-copy"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="copy"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
          />
        </svg>
      </span>
    </div>
  </div>,
]
`;

exports[`renders components/typography/demo/editable.tsx correctly 1`] = `
Array [
  <div
    class="ant-typography"
  >
    <span>
      This is an editable text.
    </span>
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="edit"
        class="anticon anticon-edit"
        role="button"
      >
        <svg
          aria-hidden="true"
          data-icon="edit"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
  >
    <span>
      This is a loooooooooooooooooooooooooooooooong editable text 
      <!-- -->
      with suffix.
    </span>
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="edit"
        class="anticon anticon-edit"
        role="button"
      >
        <svg
          aria-hidden="true"
          data-icon="edit"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    class="ant-typography"
  >
    <span>
      Custom Edit icon and replace tooltip text.
    </span>
    <div
      aria-label="click to edit text"
      class="ant-typography-edit"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="highlight"
        class="anticon anticon-highlight"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="highlight"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M957.6 507.4L603.2 158.2a7.9 7.9 0 00-11.2 0L353.3 393.4a8.03 8.03 0 00-.1 11.3l.1.1 40 39.4-117.2 115.3a8.03 8.03 0 00-.1 11.3l.1.1 39.5 38.9-189.1 187H72.1c-4.4 0-8.1 3.6-8.1 8V860c0 4.4 3.6 8 8 8h344.9c2.1 0 4.1-.8 5.6-2.3l76.1-75.6 40.4 39.8a7.9 7.9 0 0011.2 0l117.1-115.6 40.1 39.5a7.9 7.9 0 0011.2 0l238.7-235.2c3.4-3 3.4-8 .3-11.2zM389.8 796.2H229.6l134.4-133 80.1 78.9-54.3 54.1zm154.8-62.1L373.2 565.2l68.6-67.6 171.4 168.9-68.6 67.6zM713.1 658L450.3 399.1 597.6 254l262.8 259-147.3 145z"
          />
        </svg>
      </span>
    </div>
  </div>,
  Trigger edit with:,
  <!-- -->,
   ,
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
          value="icon"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        icon
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="text"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        text
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="both"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        both
      </span>
    </label>
  </div>,
  <div
    class="ant-typography"
  >
    <span>
      Text or icon as trigger - click to start editing.
    </span>
    <div
      aria-label="click to edit text"
      class="ant-typography-edit"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="edit"
        class="anticon anticon-edit"
        role="button"
      >
        <svg
          aria-hidden="true"
          data-icon="edit"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    class="ant-typography"
  >
    <span>
      Editable text with a custom enter icon in edit field.
    </span>
    <div
      aria-label="click to edit text"
      class="ant-typography-edit"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="highlight"
        class="anticon anticon-highlight"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="highlight"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M957.6 507.4L603.2 158.2a7.9 7.9 0 00-11.2 0L353.3 393.4a8.03 8.03 0 00-.1 11.3l.1.1 40 39.4-117.2 115.3a8.03 8.03 0 00-.1 11.3l.1.1 39.5 38.9-189.1 187H72.1c-4.4 0-8.1 3.6-8.1 8V860c0 4.4 3.6 8 8 8h344.9c2.1 0 4.1-.8 5.6-2.3l76.1-75.6 40.4 39.8a7.9 7.9 0 0011.2 0l117.1-115.6 40.1 39.5a7.9 7.9 0 0011.2 0l238.7-235.2c3.4-3 3.4-8 .3-11.2zM389.8 796.2H229.6l134.4-133 80.1 78.9-54.3 54.1zm154.8-62.1L373.2 565.2l68.6-67.6 171.4 168.9-68.6 67.6zM713.1 658L450.3 399.1 597.6 254l262.8 259-147.3 145z"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    class="ant-typography"
  >
    <span>
      Editable text with no enter icon in edit field.
    </span>
    <div
      aria-label="click to edit text"
      class="ant-typography-edit"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="highlight"
        class="anticon anticon-highlight"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="highlight"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M957.6 507.4L603.2 158.2a7.9 7.9 0 00-11.2 0L353.3 393.4a8.03 8.03 0 00-.1 11.3l.1.1 40 39.4-117.2 115.3a8.03 8.03 0 00-.1 11.3l.1.1 39.5 38.9-189.1 187H72.1c-4.4 0-8.1 3.6-8.1 8V860c0 4.4 3.6 8 8 8h344.9c2.1 0 4.1-.8 5.6-2.3l76.1-75.6 40.4 39.8a7.9 7.9 0 0011.2 0l117.1-115.6 40.1 39.5a7.9 7.9 0 0011.2 0l238.7-235.2c3.4-3 3.4-8 .3-11.2zM389.8 796.2H229.6l134.4-133 80.1 78.9-54.3 54.1zm154.8-62.1L373.2 565.2l68.6-67.6 171.4 168.9-68.6 67.6zM713.1 658L450.3 399.1 597.6 254l262.8 259-147.3 145z"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    class="ant-typography"
  >
    <span>
      Hide Edit tooltip.
    </span>
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="edit"
        class="anticon anticon-edit"
        role="button"
      >
        <svg
          aria-hidden="true"
          data-icon="edit"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    class="ant-typography"
  >
    <span>
      This is an editable text with limited length.
    </span>
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="edit"
        class="anticon anticon-edit"
        role="button"
      >
        <svg
          aria-hidden="true"
          data-icon="edit"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
          />
        </svg>
      </span>
    </div>
  </div>,
  <h1
    class="ant-typography"
    style="margin:0"
  >
    <span>
      h1. Ant Design
    </span>
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="edit"
        class="anticon anticon-edit"
        role="button"
      >
        <svg
          aria-hidden="true"
          data-icon="edit"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
          />
        </svg>
      </span>
    </div>
  </h1>,
  <h2
    class="ant-typography"
    style="margin:0"
  >
    <span>
      h2. Ant Design
    </span>
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="edit"
        class="anticon anticon-edit"
        role="button"
      >
        <svg
          aria-hidden="true"
          data-icon="edit"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
          />
        </svg>
      </span>
    </div>
  </h2>,
  <h3
    class="ant-typography"
    style="margin:0"
  >
    <span>
      h3. Ant Design
    </span>
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="edit"
        class="anticon anticon-edit"
        role="button"
      >
        <svg
          aria-hidden="true"
          data-icon="edit"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
          />
        </svg>
      </span>
    </div>
  </h3>,
  <h4
    class="ant-typography"
    style="margin:0"
  >
    <span>
      h4. Ant Design
    </span>
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="edit"
        class="anticon anticon-edit"
        role="button"
      >
        <svg
          aria-hidden="true"
          data-icon="edit"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
          />
        </svg>
      </span>
    </div>
  </h4>,
  <h5
    class="ant-typography"
    style="margin:0"
  >
    <span>
      h5. Ant Design
    </span>
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="edit"
        class="anticon anticon-edit"
        role="button"
      >
        <svg
          aria-hidden="true"
          data-icon="edit"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
          />
        </svg>
      </span>
    </div>
  </h5>,
]
`;

exports[`renders components/typography/demo/ellipsis.tsx correctly 1`] = `
Array [
  <button
    aria-checked="true"
    class="ant-switch ant-switch-checked"
    role="switch"
    type="button"
  >
    <div
      class="ant-switch-handle"
    />
    <span
      class="ant-switch-inner"
    >
      <span
        class="ant-switch-inner-checked"
      />
      <span
        class="ant-switch-inner-unchecked"
      />
    </span>
  </button>,
  <div
    class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
  >
    <span>
      Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team.
    </span>
  </div>,
  <div
    class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-multiple-line"
    style="-webkit-line-clamp:2"
  >
    <span>
      Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team.
    </span>
  </div>,
  <span
    class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
    style="width:200px"
  >
    <span>
      Ant Design, a design language for background applications, is refined by Ant UED Team.
    </span>
  </span>,
  <span
    class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
    style="width:200px"
  >
    <span>
      <code>
        Ant Design, a design language for background applications, is refined by Ant UED Team.
      </code>
    </span>
  </span>,
]
`;

exports[`renders components/typography/demo/ellipsis-controlled.tsx correctly 1`] = `
<div
  class="ant-flex ant-flex-align-stretch ant-flex-vertical"
  style="gap:16px"
>
  <div
    class="ant-flex ant-flex-align-center"
    style="gap:16px"
  >
    <button
      aria-checked="false"
      class="ant-switch"
      role="switch"
      style="flex:none"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        />
        <span
          class="ant-switch-inner-unchecked"
        />
      </span>
    </button>
    <div
      class="ant-slider ant-slider-horizontal"
      style="flex:auto"
    >
      <div
        class="ant-slider-rail"
      />
      <div
        class="ant-slider-track"
        style="left:0%;width:5.263157894736842%"
      />
      <div
        class="ant-slider-step"
      />
      <div
        aria-disabled="false"
        aria-orientation="horizontal"
        aria-valuemax="20"
        aria-valuemin="1"
        aria-valuenow="2"
        class="ant-slider-handle"
        role="slider"
        style="left:5.263157894736842%;transform:translateX(-50%)"
        tabindex="0"
      />
    </div>
  </div>
  <div
    class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-multiple-line"
    style="-webkit-line-clamp:2"
  >
    <span>
      Ant Design, a design language for background applications, is refined by Ant UED Team.Ant Design, a design language for background applications, is refined by Ant UED Team.Ant Design, a design language for background applications, is refined by Ant UED Team.Ant Design, a design language for background applications, is refined by Ant UED Team.Ant Design, a design language for background applications, is refined by Ant UED Team.Ant Design, a design language for background applications, is refined by Ant UED Team.Ant Design, a design language for background applications, is refined by Ant UED Team.Ant Design, a design language for background applications, is refined by Ant UED Team.Ant Design, a design language for background applications, is refined by Ant UED Team.Ant Design, a design language for background applications, is refined by Ant UED Team.Ant Design, a design language for background applications, is refined by Ant UED Team.Ant Design, a design language for background applications, is refined by Ant UED Team.Ant Design, a design language for background applications, is refined by Ant UED Team.Ant Design, a design language for background applications, is refined by Ant UED Team.Ant Design, a design language for background applications, is refined by Ant UED Team.Ant Design, a design language for background applications, is refined by Ant UED Team.Ant Design, a design language for background applications, is refined by Ant UED Team.Ant Design, a design language for background applications, is refined by Ant UED Team.Ant Design, a design language for background applications, is refined by Ant UED Team.Ant Design, a design language for background applications, is refined by Ant UED Team.
    </span>
    <div
      aria-label="Copy"
      class="ant-typography-copy"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="copy"
        class="anticon anticon-copy"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="copy"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders components/typography/demo/ellipsis-debug.tsx correctly 1`] = `
Array [
  <button
    aria-checked="true"
    class="ant-switch ant-switch-checked"
    role="switch"
    type="button"
  >
    <div
      class="ant-switch-handle"
    />
    <span
      class="ant-switch-inner"
    >
      <span
        class="ant-switch-inner-checked"
      >
        Long Text
      </span>
      <span
        class="ant-switch-inner-unchecked"
      />
    </span>
  </button>,
  <button
    aria-checked="false"
    class="ant-switch"
    role="switch"
    type="button"
  >
    <div
      class="ant-switch-handle"
    />
    <span
      class="ant-switch-inner"
    >
      <span
        class="ant-switch-inner-checked"
      />
      <span
        class="ant-switch-inner-unchecked"
      />
    </span>
  </button>,
  <button
    aria-checked="false"
    class="ant-switch"
    role="switch"
    type="button"
  >
    <div
      class="ant-switch-handle"
    />
    <span
      class="ant-switch-inner"
    >
      <span
        class="ant-switch-inner-checked"
      />
      <span
        class="ant-switch-inner-unchecked"
      />
    </span>
  </button>,
  <button
    aria-checked="false"
    class="ant-switch"
    role="switch"
    type="button"
  >
    <div
      class="ant-switch-handle"
    />
    <span
      class="ant-switch-inner"
    >
      <span
        class="ant-switch-inner-checked"
      />
      <span
        class="ant-switch-inner-unchecked"
      />
    </span>
  </button>,
  <div
    class="ant-slider ant-slider-horizontal"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="left:0%;width:0%"
    />
    <div
      class="ant-slider-step"
    />
    <div
      aria-disabled="false"
      aria-orientation="horizontal"
      aria-valuemax="10"
      aria-valuemin="1"
      aria-valuenow="1"
      class="ant-slider-handle"
      role="slider"
      style="left:0%;transform:translateX(-50%)"
      tabindex="0"
    />
  </div>,
  <div
    class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
  >
    <span>
      Ant Design, a design language for background applications, is refined by Ant UED Team. This is a nest sample
      <!-- -->
      <span
        class="ant-typography"
      >
        <span>
          <code>
            <del>
              <strong>
                Test
              </strong>
            </del>
          </code>
        </span>
      </span>
      <!-- -->
      case. Bnt Design, a design language for background applications, is refined by Ant UED Team. Cnt Design, a design language for background applications, is refined by Ant UED Team. Dnt Design, a design language for background applications, is refined by Ant UED Team. Ent Design, a design language for background applications, is refined by Ant UED Team.
    </span>
  </div>,
  <span
    class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
    style="max-width:400px;font-size:24px"
  >
    <span>
      In the process of internal desktop applications development, many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of development.
    </span>
    <div
      aria-label="Copy"
      class="ant-typography-copy"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="copy"
        class="anticon anticon-copy"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="copy"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
          />
        </svg>
      </span>
    </div>
  </span>,
  <br />,
  <span
    class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
    style="max-width:400px;font-size:12px"
  >
    <span>
      In the process of internal desktop applications development, many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of development.
    </span>
    <div
      aria-label="Copy"
      class="ant-typography-copy"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="copy"
        class="anticon anticon-copy"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="copy"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
          />
        </svg>
      </span>
    </div>
  </span>,
  <br />,
  <span
    class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
    style="width:400px;font-size:24px"
  >
    <span>
      In the process of internal desktop applications development, many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of development.
    </span>
    <div
      aria-label="Copy"
      class="ant-typography-copy"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="copy"
        class="anticon anticon-copy"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="copy"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
          />
        </svg>
      </span>
    </div>
  </span>,
  <br />,
  <span
    class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
    style="width:100px"
  >
    <span>
      Ant Design is a design language for background applications, is refined by Ant UED Team.
    </span>
    <div
      aria-label="Copy"
      class="ant-typography-copy"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-flex"
      tabindex="0"
    >
      <span
        aria-label="copy"
        class="anticon anticon-copy"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="copy"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
          />
        </svg>
      </span>
    </div>
  </span>,
  <p>
    [Before]
    <span
      class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
    >
      <span>
        not ellipsis
      </span>
    </span>
    [After]
  </p>,
  <div
    style="display:none"
  >
    <span
      class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
      style="width:100px"
    >
      <span>
        默认display none 样式的超长文字， 悬停tooltip失效了
      </span>
    </span>
  </div>,
  <div
    class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-multiple-line"
    style="width:300px;-webkit-line-clamp:3"
  >
    <span>
      In the process of internal desktop applications development,
      <span
        style="font-size:5em"
      >
        ANTD
      </span>
       many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of development.
    </span>
  </div>,
  <pre>
    <div
      class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-multiple-line"
      style="-webkit-line-clamp:2"
    >
      <span>
        this is a multiline
  text that has many
  lines and 
    - render like this
    - and this
  and that
      </span>
    </div>
  </pre>,
]
`;

exports[`renders components/typography/demo/ellipsis-middle.tsx correctly 1`] = `
<span
  class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
  style="max-width:100%"
>
  <span>
    In the process of internal desktop applications development, many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of 
    <!-- -->
    development.
  </span>
</span>
`;

exports[`renders components/typography/demo/paragraph-debug.tsx correctly 1`] = `
Array [
  <h1
    class="ant-typography"
  >
    <span>
      Introduction
    </span>
  </h1>,
  <div
    class="ant-typography"
  >
    <span>
      In the process of internal desktop applications development, many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of development.
    </span>
  </div>,
  <div
    class="ant-typography"
  >
    <span>
      After massive project practice and summaries, Ant Design, a design language for background applications, is refined by Ant UED Team, which aims to
      <span
        class="ant-typography"
      >
        <span>
          <strong>
            uniform the user interface specs for internal background projects, lower the unnecessary cost of design differences and implementation and liberate the resources of design and front-end development
          </strong>
        </span>
      </span>
      .
    </span>
  </div>,
  <h2
    class="ant-typography"
  >
    <span>
      Guidelines and Resources
    </span>
  </h2>,
  <div
    class="ant-typography"
  >
    <span>
      We supply a series of design principles, practical patterns and high quality design resources (
      <span
        class="ant-typography"
      >
        <span>
          <code>
            Sketch
          </code>
        </span>
      </span>
       and 
      <span
        class="ant-typography"
      >
        <span>
          <code>
            Axure
          </code>
        </span>
      </span>
      ), to help people create their product prototypes beautifully and efficiently.
    </span>
  </div>,
  <div
    class="ant-typography"
  >
    <span>
      <ul>
        <li>
          <a
            href="/docs/spec/proximity"
          >
            Principles
          </a>
        </li>
        <li>
          <a
            href="/docs/pattern/navigation"
          >
            Patterns
          </a>
        </li>
        <li>
          <a
            href="/docs/resource/download"
          >
            Resource Download
          </a>
        </li>
      </ul>
    </span>
  </div>,
  <h1
    class="ant-typography"
    id="intro"
  >
    <span>
      介绍
    </span>
  </h1>,
  <div
    class="ant-typography"
  >
    <span>
      蚂蚁的企业级产品是一个庞大且复杂的体系。这类产品不仅量级巨大且功能复杂，而且变动和并发频繁，常常需要设计与开发能够快速的做出响应。同时这类产品中有存在很多类似的页面以及组件，可以通过抽象得到一些稳定且高复用性的内容。
    </span>
  </div>,
  <div
    class="ant-typography"
  >
    <span>
      随着商业化的趋势，越来越多的企业级产品对更好的用户体验有了进一步的要求。带着这样的一个终极目标，我们（蚂蚁集团体验技术部）经过大量的项目实践和总结，逐步打磨出一个服务于企业级产品的设计体系 Ant Design。基于
      <span
        class="ant-typography"
      >
        <span>
          <mark>
            『确定』和『自然』
          </mark>
        </span>
      </span>
      的设计价值观，通过模块化的解决方案，降低冗余的生产成本，让设计者专注于
      <span
        class="ant-typography"
      >
        <span>
          <strong>
            更好的用户体验
          </strong>
        </span>
      </span>
      。
    </span>
  </div>,
  <h2
    class="ant-typography"
  >
    <span>
      设计资源
    </span>
  </h2>,
  <div
    class="ant-typography"
  >
    <span>
      我们提供完善的设计原则、最佳实践和设计资源文件（
      <span
        class="ant-typography"
      >
        <span>
          <code>
            Sketch
          </code>
        </span>
      </span>
       和
      <span
        class="ant-typography"
      >
        <span>
          <code>
            Axure
          </code>
        </span>
      </span>
      ），来帮助业务快速设计出高质量的产品原型。
    </span>
  </div>,
  <div
    class="ant-typography"
  >
    <span>
      <ul>
        <li>
          <a
            href="/docs/spec/proximity"
          >
            设计原则
          </a>
        </li>
        <li>
          <a
            href="/docs/pattern/navigation"
          >
            设计模式
          </a>
        </li>
        <li>
          <a
            href="/docs/resource/download"
          >
            设计资源
          </a>
        </li>
      </ul>
    </span>
  </div>,
  <div
    class="ant-typography"
  >
    <span>
      <ul>
        <li>
          I am an unordered item
        </li>
        <li>
          I am an unordered item with an ordered sublist
          <ol>
            <li>
              I am ordered
            </li>
          </ol>
          <ul>
            <li>
              I am unordered
            </li>
          </ul>
        </li>
      </ul>
      <ol>
        <li>
          Ordered list item with unordered sublist
          <ul>
            <li>
              I am unordered!
            </li>
            <li>
              I am also unordered!
            </li>
          </ul>
        </li>
      </ol>
    </span>
  </div>,
]
`;

exports[`renders components/typography/demo/suffix.tsx correctly 1`] = `
Array [
  <div
    class="ant-slider ant-slider-horizontal"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="left:0%;width:0%"
    />
    <div
      class="ant-slider-step"
    />
    <div
      aria-disabled="false"
      aria-orientation="horizontal"
      aria-valuemax="10"
      aria-valuemin="1"
      aria-valuenow="1"
      class="ant-slider-handle"
      role="slider"
      style="left:0%;transform:translateX(-50%)"
      tabindex="0"
    />
  </div>,
  <div
    class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
    title="To be, or not to be, that is the question: Whether it is nobler in the mind to suffer. The slings and arrows of outrageous fortune Or to take arms against a sea of troubles, And by opposing end them? To die: to sleep; No more; and by a sleep to say we end The heart-ache and the thousand natural shocks That flesh is heir to, 'tis a consummation Devoutly to be wish'd. To die, to sleep To sleep- perchance to dream: ay, there's the rub! For in that sleep of death what dreams may come When we have shuffled off this mortal coil, Must give us pause. There 's the respect That makes calamity of so long life--William Shakespeare"
  >
    <span>
      To be, or not to be, that is the question: Whether it is nobler in the mind to suffer. The slings and arrows of outrageous fortune Or to take arms against a sea of troubles, And by opposing end them? To die: to sleep; No more; and by a sleep to say we end The heart-ache and the thousand natural shocks That flesh is heir to, 'tis a consummation Devoutly to be wish'd. To die, to sleep To sleep- perchance to dream: ay, there's the rub! For in that sleep of death what dreams may come When we have shuffled off this mortal coil, Must give us pause. There 's the respect That makes calamity of so long life
      <!-- -->
      --William Shakespeare
    </span>
  </div>,
]
`;

exports[`renders components/typography/demo/text.tsx correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small"
>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography"
    >
      <span>
        Ant Design (default)
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography ant-typography-secondary"
    >
      <span>
        Ant Design (secondary)
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography ant-typography-success"
    >
      <span>
        Ant Design (success)
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography ant-typography-warning"
    >
      <span>
        Ant Design (warning)
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography ant-typography-danger"
    >
      <span>
        Ant Design (danger)
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography ant-typography-disabled"
    >
      <span>
        Ant Design (disabled)
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography"
    >
      <span>
        <mark>
          Ant Design (mark)
        </mark>
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography"
    >
      <span>
        <code>
          Ant Design (code)
        </code>
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography"
    >
      <span>
        <kbd>
          Ant Design (keyboard)
        </kbd>
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography"
    >
      <span>
        <u>
          Ant Design (underline)
        </u>
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography"
    >
      <span>
        <del>
          Ant Design (delete)
        </del>
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography"
    >
      <span>
        <strong>
          Ant Design (strong)
        </strong>
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography"
    >
      <span>
        <i>
          Ant Design (italic)
        </i>
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <a
      class="ant-typography"
      href="https://ant.design"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Ant Design (Link)
      </span>
    </a>
  </div>
</div>
`;

exports[`renders components/typography/demo/title.tsx correctly 1`] = `
Array [
  <h1
    class="ant-typography"
  >
    <span>
      h1. Ant Design
    </span>
  </h1>,
  <h2
    class="ant-typography"
  >
    <span>
      h2. Ant Design
    </span>
  </h2>,
  <h3
    class="ant-typography"
  >
    <span>
      h3. Ant Design
    </span>
  </h3>,
  <h4
    class="ant-typography"
  >
    <span>
      h4. Ant Design
    </span>
  </h4>,
  <h5
    class="ant-typography"
  >
    <span>
      h5. Ant Design
    </span>
  </h5>,
]
`;
